# Argus-du-Libre

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  manage.py  pyproject.toml
.claude/: settings.json
argus_du_libre/: admin.py  apps.py  asgi.py  auth.py  settings.py  urls.py  wsgi.py
argus_du_libre/tests/: __init__.py  test_admin_redirect.py  test_oidc_auth.py
categories/: admin.py  models.py  tests.py
categories/migrations/: 0002_field_fieldtranslation.py  0003_tag.py  0004_software.py
projects/: admin.py  apps.py  models.py  tests.py
projects/fixtures/: categories.json  category_translations.json  field_translations.json  fields.json  metric_translations.json  metrics.json
projects/migrations/: 0001_initial.py  0005_block.py  0006_analysisresult.py  0007_metric_metrictranslation_metricvalue_and_more.py  0008_remove_metricvalue_categories__is_vali_3b0ce8_idx_and_more.py  0009_software_last_metrics_update_at_and_more.py
public/: tests.py  urls.py  views.py
public/locale/fr/LC_MESSAGES/: django.mo  django.po
public/templates/public/: about.html  base.html  compare.html  field_metrics.html  home.html  project_detail.html  search.html  tag_detail.html
public/templatetags/: __init__.py  markdown_extras.py
